	EPSON PictureMate 260
	EPSON PictureMate 290
	EPSON PictureMate 500
	EPSON PictureMate Dash
	EPSON Stylus D92
	EPSON Stylus DX4400
	EPSON Stylus DX4450
	EPSON Stylus DX7000F
	EPSON Stylus DX7400
	EPSON Stylus DX7450
	EPSON Stylus DX8400
	EPSON Stylus DX8450
	EPSON Stylus Photo R280
	EPSON Stylus Photo R285
	EPSON Stylus Photo RX585
	EPSON Stylus Photo RX680
	EPSON Stylus Photo RX685

----------------

* NEW FEATURES AND FIXES IN GUTENPRINT 5.1.6:

   1) A bug involving excessive memory consumption in certain cases
      has been fixed.  Printing multiple page documents on Canon
      inkjet printers with the Duplex option set to Long Edge resulted
      in very large memory consumption on alternate pages, which was
      not released until the job completed.  For example, in color at
      600 DPI, the memory consumption would be about 120 megabytes on
      alternate pages, so printing a 100 page document would result in
      6 GB of memory consumption.  Depending upon the system, the
      results might be that the job would fail to print or would only
      partially print, the system might run very slowly while the job
      was being processed, or other components of the system might
      fail.

   2) The Ordered New dither algorithm has been improved to produce
      smoother output.


----------------

* NEW FEATURES AND FIXES IN GUTENPRINT 5.1.5:

   1) New printers supported in this release:

      * Epson inkjet printers:

      	EPSON Stylus C110
      	EPSON Stylus C120
      	EPSON Stylus D120
      	EPSON PX V780

      * PCL laser printers:

      	Sharp AR-M257

   2) Preliminary support for the following printers:

      * Canon inkjet printers:

      	Canon PIXMA iP8500
      	Canon PIXMA Pro 9500
	Canon PIXMA MP610
	Canon i80

   3) The printer maintenance utility for EPSON inkjet printers,
      escputil, now reports status more reliably.  Previously some
      people reported errors of the form "Unknown IEEE 1284.4 error";