@@ -614,6 +614,18 @@ static const canon_cap_t canon_model_capabilities[] =
     iP4200_sat_adjustment
   },
   { /* Canon PIXMA iP6700 */
+    "PIXMA iP6000", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_PIXMA_iP4000_slotlist,
+    CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_r|CANON_CAP_px,0x64,control_cmd_PIXMA_iP4000,  /*features */
+    &canon_PIXMA_iP6000_modelist,
+    &canon_PIXMA_iP4000_paperlist,
+    NULL,
+    NULL,
+    NULL
+  },
+  { /* Canon PIXMA iP6700 */
     "PIXMA iP6700", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
     10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
